--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "lint-fix": "npx eslint src --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
     "styled-components": "^6.0.0-rc.3"
   },
   "devDependencies": {
